fixing white space at the top of the page

--- a/src/app/styles/pages/_login.scss
+++ b/src/app/styles/pages/_login.scss
@@ -4,6 +4,7 @@
 	width: 100%;
 	min-height: $min-page-height;
 	overflow-x: hidden;
+	margin-top: -2rem;
 	@include flex-center;
 
 	&__centerBox {
