--- a/src/app/styles/pages/_welcome.scss
+++ b/src/app/styles/pages/_welcome.scss
@@ -4,6 +4,7 @@
 	min-height: $min-page-height;
 	overflow-x: hidden;
 	width: 100%;
+	margin-top: -2rem;
 	@include flex-center;
 
 	&__centerBox {
